ok spacing issue ur done lil bro

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
   opacity: 0;
   visibility:visible;
   margin-top: 0vh;
-  margin-bottom: 0vh;
+  margin-bottom: 2vh;
   height: 0px;
   }
 
